--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="card">
       <h2>第 1 课：示例</h2>
       <video controls preload="metadata">
-        <source src="https://pub-e6110f06d68848828d4ac16a02e498d9.r2.dev/Shape of Dreams 2025-10-04 12-55-04.mp4" type="video/mp4">
+        <source src="https://media.haiyidawangzifan.xyz/Shape of Dreams 2025-10-04 12-55-04.mp4" type="video/mp4">
         你的浏览器不支持 video 标签。
       </video>
     </div>
