--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>我的教学视频</title>
+  <title>jjjjyyyy</title>
   <style>
     body{font-family:system-ui,-apple-system,"PingFang SC",Segoe UI,Roboto,Arial; margin:0; padding:16px; line-height:1.6;}
     .wrap{max-width:900px; margin:0 auto;}
@@ -18,7 +18,7 @@
     <p class="muted">来看你爹的精彩操作集锦。</p>
 
     <div class="card">
-      <h2>第 1 课：示例</h2>
+      <h2>示例</h2>
       <video controls preload="metadata">
         <source src="https://media.haiyidawangzifan.xyz/Shape of Dreams 2025-10-04 12-55-04.mp4" type="video/mp4">
         你的浏览器不支持 video 标签。
