--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@ const VIDEO_KEYS = [
   // "m7demo",
   // "m8demo",
   // "m9demo"
-  "m1Shape of Dreams 2025-10-04 12-55-04"
+  "Shape of Dreams 2025-10-04 12-55-04"
 ];
 
 // 3) 每页显示 8 个（2行4列）
