--- a/index.html
+++ b/index.html
@@ -302,13 +302,13 @@ const VIDEO_DESC = {
 
 // 5) Giscus 留言（需要你后续把 data-repo 等填成你的仓库）
 //    如果你暂时不想做留言，可以把 ENABLE_COMMENTS 设为 false
-const ENABLE_COMMENTS = false;
+const ENABLE_COMMENTS = true;
 const GISCUS_CONFIG = {
   // 你需要把下面这些改成你自己的（按 giscus.app 配置页面生成）
-  repo: "YOUR_GITHUB_USERNAME/YOUR_REPO",
-  repoId: "YOUR_REPO_ID",
-  category: "General",
-  categoryId: "YOUR_CATEGORY_ID",
+  repo: "jjy114514/jjy114514.github.io",
+  repoId: "R_kgDORHiRYQ",
+  category: "Ideas",
+  categoryId: "DIC_kwDORHiRYc4C10nH",
 };
 
 /** =======================
